# teo-armarx-packages

./: README.md
TEOWaving/: CMakeLists.txt
TEOWaving/data/TEOWaving/: StatechartProfiles-TEOWaving.xml  VariantInfo-TEOWaving.xml
TEOWaving/etc/cmake/: UseTEOWaving.cmake
TEOWaving/etc/doxygen/: mainpage.dox
TEOWaving/etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
TEOWaving/scenarios/TEOWave/: TEOWave.scx
TEOWaving/scenarios/TEOWave/config/: KinematicUnitObserver.cfg  KinematicUnitSimulation.cfg  XMLRemoteStateOfferer.Waving.cfg  global.cfg
TEOWaving/source/: CMakeLists.txt
TEOWaving/source/TEOWaving/interface/: CMakeLists.txt
TEOWaving/source/TEOWaving/statecharts/: CMakeLists.txt
TEOWaving/source/TEOWaving/statecharts/Waving/: CMakeLists.txt  CounterState.cpp  CounterState.h  CounterState.xml  MainState.cpp  MainState.h  MainState.xml  MoveJoints.cpp  MoveJoints.h  MoveJoints.xml  SetJoints.cpp  SetJoints.h  SetJoints.xml  Waving.scgxml  WavingRemoteStateOfferer.cpp  WavingRemoteStateOfferer.h
WavingReDo/: CMakeLists.txt
WavingReDo/data/WavingReDo/: StatechartProfiles-WavingReDo.xml  VariantInfo-WavingReDo.xml
WavingReDo/etc/cmake/: UseWavingReDo.cmake
WavingReDo/etc/doxygen/: mainpage.dox
WavingReDo/etc/doxygen/pages/: Components.dox  FAQ.dox  GuiPlugins.dox  HowTos.dox  Overview.dox  Tutorials.dox
WavingReDo/scenarios/TEOWavingReDo/: TEOWavingReDo.scx
WavingReDo/source/: CMakeLists.txt
WavingReDo/source/WavingReDo/: CMakeLists.txt
(+24 files in other folders)
